# spigal

./: Cargo.toml
src/: helpers.rs  iter.rs  lib.rs
