[package]
categories = ["no-std", "data-structures"]
description = "A simple fixed-length ring buffer implementation, intended to be no-frills and easy to use, especially for embedded applications."
edition = "2021"
keywords = ["ring-buffer", "ring-queue", "circular-buffer", "circular-queue"]
license = "MIT"
name = "spigal"
repository = "https://github.com/linclelinkpart5/spigal"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
cool_asserts = "2"
proptest = "1"

[features]
advance_by = []
